.deployment/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtu-x-frontend
  namespace: virtu-x-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: virtu-x-frontend
  template:
    metadata:
      labels:
        app: virtu-x-frontend
    spec:
      imagePullSecrets:
        - name: docker-hub-registry
      containers:
        - name: virtu-x-frontend
          image: usol/virtu-x-front-end:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 1000Mi

---
apiVersion: v1
kind: Service
metadata:
  name: virtu-x-frontend
  namespace: virtu-x-ns
spec:
  selector:
    app: virtu-x-frontend
  ports:
    - name: virtu-x-frontend
      protocol: TCP
      port: 5005
      targetPort: 80
